# VMware-FB-Via-auto-login

./: .coverage  .gitignore  Classes Diagram.md  README.md  config windows.json  config.json  config.py  log_path.txt  logger.py  pyproject.toml  requirements_dev.txt  run.sh  setup.cfg  tox.ini  virtual_machine.py  vm_app.py  vm_log_session.py  vm_monitor.py
.github/workflow/: test.yml
.github/workflows/: master.yml
.tox/flake8/: .tox-info.json
.tox/mypy/: .tox-info.json
.tox/py36/: .tox-info.json
.tox/py37/: .tox-info.json
.tox/py38/: .tox-info.json
.tox/py39/: .tox-info.json
backend/: .gitignore  config.json  config.py
frontend/: backend.py  main.py  main.qml  mockup design.ai
src/: config.json  config.py  run.sh  vm_app.py
src/backend/: capturescreen.sh  config copy.json  config.json  config.py  logger.py  main.py  run.sh  virtual_machine.py  vm_app.py  vm_log_session.py  vm_monitor.py
tests/unit_tests/: test_config.py
