[metadata]
name = VMware FB Auto Login
description = Auto login FB via in VMware
author = Tu Dragon
license = GPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8f
    Programming Language :: Python :: 3.9

[options]
packages=find:
install_requires = 
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.packages.find]
where=src

[options.package_data]
backend = py.typed
fronend = py.typed

[flake8]
max-line-length = 160
extend-ignore = E127